--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@exampledev/new.css": "^1.1.3",
+    "@zip.js/zip.js": "^2.2.39",
     "sirv-cli": "^1.0.0",
     "svelte-spa-router": "^3.1.0"
   }
