--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@exampledev/new.css": "^1.1.3",
     "@zip.js/zip.js": "^2.2.39",
     "js-base64": "^3.6.1",
+    "katex": "^0.13.11",
     "sirv-cli": "^1.0.0",
     "svelte-spa-router": "^3.1.0"
   }
