--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-svelte3": "^3.2.0",
     "rollup": "^2.3.4",
     "rollup-plugin-copy-glob": "^0.3.1",
     "rollup-plugin-css-only": "^3.1.0",
