--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-svelte3": "^3.2.0",
+    "jest": "^27.0.4",
     "rollup": "^2.3.4",
     "rollup-plugin-copy-glob": "^0.3.1",
     "rollup-plugin-css-only": "^3.1.0",
