--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-env": "^7.14.5",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "autoprefixer": "^10.2.6",
     "babel-jest": "^27.0.2",
     "eslint": "^7.28.0",
     "eslint-config-standard": "^16.0.3",
@@ -22,6 +23,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "jest": "^27.0.4",
+    "postcss": "^8.3.5",
     "rollup": "^2.3.4",
     "rollup-plugin-copy-glob": "^0.3.1",
     "rollup-plugin-css-only": "^3.1.0",
@@ -29,7 +31,8 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "rollup-plugin-version-injector": "^1.3.3",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "tailwindcss": "^2.2.4"
   },
   "dependencies": {
     "@exampledev/new.css": "^1.1.3",
