--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rollup-plugin-terser": "^7.0.0",
     "rollup-plugin-version-injector": "^1.3.3",
     "svelte": "^3.0.0",
+    "svelte-preprocess": "^4.7.3",
     "tailwindcss": "^2.2.4"
   },
   "dependencies": {
