--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,7 +4,7 @@
     "at-rule-no-unknown": [
       true,
       {
-        "ignoreAtRules": ["extends"]
+        "ignoreAtRules": ["extends", "tailwind"]
       }
     ],
     "block-no-empty": null,
