--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "css.validate": false,
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
     },
@@ -9,5 +10,6 @@
     ],
     "files.associations": {
         "*.svelte": "html"
-    }
+    },
+    "stylelint.enable": true
 }
