--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -15,3 +15,4 @@ vscode:
     - svelte.svelte-vscode
     - dbaeumer.vscode-eslint
     - editorconfig.editorconfig
+    - stylelint.vscode-stylelint
