--- a/.stylelintrc
+++ b/.stylelintrc
@@ -14,6 +14,6 @@
         "ignorePseudoClasses": ["global"]
       }
     ],
-    "unit-allowed-list": ["em", "rem", "s"]
+    "unit-allowed-list": ["em", "rem", "s", "%"]
   }
 }
